<resources>
    <string name="app_name">AboutMe</string>
    <string name="name">Phatnithi Skonthawat</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio">asdlkasldkjfsaldjflajfdlal.
    \nasdlkfjalsdjflkasjdlfjalsdfjlsdjflkkkkkkkkkkkkkkkkkkkkkkkkkkkk
    \najsdlfjaslkdfaklsdfj
    \nasjdflkasjdflksjlfjlsdf
    \nalsjflasjflkjsldfjalsjflksdf
    \nlllllldsflskgfokoo
    \najsldfalksjflasjdlsajf
    \n\nakjdslkjfalksjdflajsjfladf
    \njflskdafjlksdjlfajskldfjaslf
    \njkalsjflksdjlkfajslkfjaklsd
    \nasdlkfjalsdjflkasjdlfjalsdfjlsdjfl
    \najsdlfjaslkdfaklsdfj
    \nasjdflkasjdflksjlfjlsdf
    \nalsjflasjflkjsldfjalsjflksdf
    \nlllllldsflskgfokoo
    \n\n\nEND\n\n\n</string>
    <string name="Profilepicture">Profilepicture</string>
    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="done">Done</string>
</resources>
